src/styles/blog.css
.posts_container {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.post {
	display: flex;
	flex-direction: column;
}

.post a {
	font-size: 1.2rem;
	font-weight: 600;
	color: white;
	transition: all 100ms ease;
}

.post p {
	font-size: 17px;
}

.post a:hover {
	color: var(--highlight-color);
}

.blog h1,
.blog h2,
.blog h3,
.blog h4,
.blog h5 {
	width: max-content;
	line-height: 1.75rem;
	margin-top: 2.5rem;
	margin-bottom: 2rem;
}

.blog ul,
.blog ol {
	list-style-position: inside;
	padding-left: 1rem;
}

/* For some reason this is the style used for ul that contain checkboxes */
.contains-task-list {
	list-style: none;
}

.post p,
.post time {
	opacity: 0.8;
}

.blog p,
.blog h1,
.blog h2,
.blog h3,
.blog h4,
.blog h5,
.blog h6,
.blog pre,
.blog ul,
.blog ol,
.blog img,
.blog blockquote {
	margin-bottom: 1rem;
}

.blog img {
	margin-top: 1rem;
}

.blog h1 {
	font-size: 27px;
}

.blog h2 {
	font-size: 24px;
}

.blog pre {
	padding: 1.25rem;
	font-size: 0.9rem;
	overflow-x: auto;
	border-radius: 0.5rem;
	width: 100%;
}

.blog pre code {
	border-radius: 0.5rem;
	all: unset;
}

.blog blockquote {
	font-style: italic;
	display: flex;
	border-left: 2px solid var(--highlight-color);
	padding: 0 0.5rem;
	flex-direction: column;
	opacity: 0.9;
}

.blog p code {
	all: unset;
	background-color: #2d2d2d;
	font-size: 0.984rem;
	border-radius: .2rem;
	padding: 0.2rem
}

.blog img {
	width: 100%;
	height: 100%;
	max-height: 30rem;
	/*object-fit: contain;*/
	/*border-radius: 0.5rem;*/
}

.blog p,
.blog pre,
.blog ul,
.blog ol,
.blog img,
.blog blockquote {
	margin-bottom: 0.75rem;
}

